--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "./node_modules/.bin/eslint --fix src --max-warnings=0",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch",
+    "test": "jest --passWithNoTests --verbose --coverage=false",
+    "test:coverage": "jest --passWithNoTests --coverage",
+    "test:watch": "jest --watch --verbose --coverage=false",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "lint-staged": {
     "src/**/*": [
@@ -18,16 +20,31 @@
       "npm run test --findRelatedTests --bail"
     ]
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "dependencies": {
+    "@styled-icons/evaicons-outline": "^10.34.0",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.2.0",
+    "leaflet": "^1.8.0",
     "next": "12.1.6",
     "next-pwa": "^5.5.2",
+    "nextjs-progressbar": "0.0.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-leaflet": "^4.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
     "@babel/preset-typescript": "^7.16.7",
+    "@graphql-codegen/add": "^3.1.1",
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.11",
+    "@graphql-codegen/typescript-operations": "2.4.0",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
@@ -37,6 +54,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@types/jest": "^27.5.1",
+    "@types/leaflet": "^1.7.10",
     "@types/node": "^17.0.32",
     "@types/react": "^18.0.9",
     "@types/styled-components": "^5.1.25",
